# cli-media-server

./: Cargo.toml
.shuttle/: config.toml
migrations/: 20250106211148_sqls.sql
src/: main.rs  posts.json  users.json
