[package]
name = "cli-media"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.68"
axum = "0.7"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
serde = { version = "1.0.188", features = ["derive"] }
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = [ "runtime-tokio-native-tls", "postgres", "macros"] }
tokio = "1.28.2"
dotenv = "0.15.0"
http = "1.2.0"
hyper = "1.5.2"
rand = "0.8.5"
